fixed overflow, unauthorized routes and models

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,6 @@
 body{
     color: white;
+    overflow-x: hidden;
 }
 
 #logo{
